--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
       <h1>XML File Processor</h1>
       <div class="actions">
         <button id="loadFilesBtn">Load XML Files</button>
-        <button id="preprocessBtn">Preprocess Files</button>
-        <button id="trainModelBtn">Train Model</button>
+        <button id="extractDBBtn">Extract & Save to DB</button>
+        <button id="trainTestBtn">Train & Test</button>
       </div>
       <div class="upload-section">
         <input type="file" id="uploadFileInput" style="display: none" />
